--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,18 +13,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" href="/assets/logo.png">
+    <link rel="shortcut icon" href="https://www.divismart.com/static/site/logo.png">
 
   <!-- Compiled and minified CSS -->
 
-    <link href="/assets/css/materialize.css" rel="stylesheet">
-    <link href="/assets/css/mat-style.css" rel="stylesheet">
+    <link href="https://www.divismart.com/static/site/css/materialize.css" rel="stylesheet">
+    <link href="https://www.divismart.com/static/site/css/mat-style.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link href="/assets/css/font-awesome.min.css" rel="stylesheet">
+    <link href="https://www.divismart.com/static/site/css/font-awesome.min.css" rel="stylesheet">
 
     <script src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
-    <script type="text/javascript" src="/assets/js/materialize.js"></script>
-    <script type="text/javascript" src="/assets/js/init.js"></script>
+    <script type="text/javascript" src="https://www.divismart.com/static/site/js/materialize.js"></script>
+    <script type="text/javascript" src="https://www.divismart.com/static/site/js/init.js"></script>
 
     </head><!--/head-->
 
@@ -71,7 +71,7 @@
         <nav class="white">
             <div class="nav-wrapper">
                 <a class="brand-logo left" href="/">
-                    <img src="/assets/images/ico/logo.png" alt="Logo">
+                    <img src="https://www.divismart.com/static/site/images/ico/logo.png" alt="Logo">
                 </a>
                 <ul class="right hide-on-med-and-down">
                     <li><a href="http://divismart.com/" title='Home'>Home</a></li>
