--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -97,7 +97,7 @@
   min-height: 50px;
   line-height: 0;
   height: auto;
-    background: url("{{ site.baseurl }}https://www.divismart.com/static/site/images/custom-header-about.jpg") no-repeat;
+    background: url("https://www.divismart.com/static/site/images/custom-header-about.jpg") no-repeat;
   background-size: cover;
   background-attachment: fixed;
   background-position: 10% 0%;
