--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -33,61 +33,65 @@
 
           <!-- header Nav Start -->
     <ul id="dropdown1" class="dropdown-content">
-        <li><a href='http://divismart.com/about/' title='About'>About Us</a></li>
-        <li><a href='http://divismart.com/faq/' title='FAQ'>FAQ</a></li>
-        <li><a href='http://divismart.com/guide/' title='Resources'>Resources</a></li>
-        <li><a href='http://divismart.com/disclaimer/' title='Disclaimer'>Disclaimer</a></li>
-        <li><a href='http://divismart.com/contact/' title='Contact'>Contact</a></li>
+        <li><a href='{% url 'faq' %}' title='FAQ'>FAQ</a></li>
+        <li><a href='{% url 'guide' %}' title='Resources'>Resources</a></li>
+        <li><a href='{% url 'disclaimer' %}' title='Disclaimer'>Disclaimer</a></li>
+        <li><a href='{% url 'contact' %}' title='Contact'>Contact</a></li>
     </ul>
     <ul id="dropdown2" class="dropdown-content">
-        <li><a href='http://divismart.com/accounts/' title='Account'>Account Details</a></li>
-        <li><a href='http://divismart.com/accounts/signout' title='Logout'>Logout</a></li>
+        <li><a href='/accounts/' title='Account'>Account Details</a></li>
+        <li><a href='/accounts/signout' title='Logout'>Logout</a></li>
     </ul>
 
     <ul id="dropdown3" class="dropdown-content">
-        <li><a href='http://divismart.com/about/' title='About'>About Us</a></li>
-        <li><a href='http://divismart.comhttp://divismart.com/faq/' title='FAQ'>FAQ</a></li>
-        <li><a href='http://divismart.com/guide/' title='Resources'>Resources</a></li>
-        <li><a href='http://divismart.com/disclaimer/' title='Disclaimer'>Disclaimer</a></li>
-        <li><a href='http://divismart.com/contact/' title='Contact'>Contact</a></li>
+        <li><a href='{% url 'faq' %}' title='FAQ'>FAQ</a></li>
+        <li><a href='{% url 'guide' %}' title='Resources'>Resources</a></li>
+        <li><a href='{% url 'disclaimer' %}' title='Disclaimer'>Disclaimer</a></li>
+        <li><a href='{% url 'contact' %}' title='Contact'>Contact</a></li>
     </ul>
     <ul id="dropdown4" class="dropdown-content">
-        <li><a href='http://divismart.com/accounts/' title='Account'>Account Details</a></li>
-        <li><a href='http://divismart.com/accounts/signout' title='Logout'>Logout</a></li>
+        <li><a href='/accounts/' title='Account'>Account Details</a></li>
+        <li><a href='/accounts/signout' title='Logout'>Logout</a></li>
     </ul>
 
-    
+    {# Mobile only side navbar #}
     <ul class="side-nav" id="mobile-demo">
-        <li><a href='http://divismart.com/' title='Home'>Home</a></li>
-        <li><a href='http://divismart.com/cashflow_engine/' title='Analyze'>Run Analysis</a></li>
-        <li><a href='http://divismart.com/pricing' title='Pricing'>Pricing</a></li>
+        <li><a href='{% url 'home' %}' title='Home'>Home</a></li>
+        <li><a href='{% url 'calculator:calcindex' %}' title='Analyze'>Run Analysis</a></li>
         <li><a class="dropdown-button" href="#" data-activates="dropdown1">More<i class="material-icons right">arrow_drop_down</i></a></li>
-        
+        {% if not user.is_authenticated %}
+            <li><a href='/accounts/signin' title='Login'>Login</a></li>
+        {% else %}
+            <li><a href='/myreports/' title='My Reports'>My Reports</a></li>
             <li><a class="dropdown-button" href="#" data-activates="dropdown2">Account<i class="material-icons right">arrow_drop_down</i></a></li>
-        
+        {% endif %}
     </ul>
 
     <div class="navbar-fixed">
         <nav class="white">
             <div class="nav-wrapper">
-                <a class="brand-logo left" href="/">
-                    <img src="https://www.divismart.com/static/site/images/ico/logo.png" alt="Logo">
+                <a class="brand-logo left" href="{% url 'home' %}">
+                    <img src="{% static 'site/images/ico/logo.png' %}" alt="Logo">
                 </a>
                 <ul class="right hide-on-med-and-down">
-                    <li><a href="http://divismart.com/" title='Home'>Home</a></li>
-                    <li><a href='http://divismart.com/cashflow_engine/' title='Analyze'>Run Analysis</a></li>
-                    <li><a href='http://divismart.com/pricing' title='Pricing'>Pricing</a></li>
+                    {# <li><a href='{% url 'home' %}' title='Home'>Home</a></li> #}
+                    <li><a href='{% url 'calculator:calcindex' %}' title='Analyze'>Run Analysis</a></li>
+                    <li><a href='{% url 'about' %}' title='About'>About Us</a></li>
+                    <li><a href='http://blog.divismart.com/' title='Blog'>Blog</a></li>
                     <li><a class="dropdown-button" href="#" data-activates="dropdown3">More<i class="material-icons right">arrow_drop_down</i></a></li>
-                    
+                    {% if not user.is_authenticated %}
+                        <li><a href='/accounts/signin' title='Login'>Login/Signup</a></li>
+                    {% else %}
+                        <li><a href='/myreports/' title='My Reports'>My Reports</a></li>
                         <li><a class="dropdown-button" href="#" data-activates="dropdown4">Account<i class="material-icons right">arrow_drop_down</i></a></li>
-                    
+                    {% endif %}
                 </ul>
                 <ul class="right">
                     <li>
                         <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons right">menu</i></a>
                     </li>
                 </ul>
-            </div>
+            
         </nav>
     </div>
 
