--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -45,12 +45,12 @@
     </ul>
 
     <ul id="dropdown3" class="dropdown-content">
-        <li><a href='http://divismart.com/about/' title='About'>About Us</a></li>
-        <li><a href='http://divismart.comhttp://divismart.com/faq/' title='FAQ'>FAQ</a></li>
+        <li><a href='http://divismart.com/faq/' title='FAQ'>FAQ</a></li>
         <li><a href='http://divismart.com/guide/' title='Resources'>Resources</a></li>
         <li><a href='http://divismart.com/disclaimer/' title='Disclaimer'>Disclaimer</a></li>
         <li><a href='http://divismart.com/contact/' title='Contact'>Contact</a></li>
     </ul>
+
     <ul id="dropdown4" class="dropdown-content">
         <li><a href='http://divismart.com/accounts/' title='Account'>Account Details</a></li>
         <li><a href='http://divismart.com/accounts/signout' title='Logout'>Logout</a></li>
@@ -60,9 +60,7 @@
     <ul class="side-nav" id="mobile-demo">
         <li><a href='http://divismart.com/' title='Home'>Home</a></li>
         <li><a href='http://divismart.com/cashflow_engine/' title='Analyze'>Run Analysis</a></li>
-        <li><a href='http://divismart.com/pricing' title='Pricing'>Pricing</a></li>
         <li><a class="dropdown-button" href="#" data-activates="dropdown1">More<i class="material-icons right">arrow_drop_down</i></a></li>
-        
             <li><a class="dropdown-button" href="#" data-activates="dropdown2">Account<i class="material-icons right">arrow_drop_down</i></a></li>
         
     </ul>
@@ -76,7 +74,6 @@
                 <ul class="right hide-on-med-and-down">
                     <li><a href="http://divismart.com/" title='Home'>Home</a></li>
                     <li><a href='http://divismart.com/cashflow_engine/' title='Analyze'>Run Analysis</a></li>
-                    <li><a href='http://divismart.com/pricing' title='Pricing'>Pricing</a></li>
                     <li><a class="dropdown-button" href="#" data-activates="dropdown3">More<i class="material-icons right">arrow_drop_down</i></a></li>
                     
                         <li><a class="dropdown-button" href="#" data-activates="dropdown4">Account<i class="material-icons right">arrow_drop_down</i></a></li>
@@ -106,7 +103,7 @@
       <div class="row" style="padding:0% 10% 0% 10%">
         <div class="col l6 s12">
           <h5 class="white-text">DiviSmart</h5>
-          <p class="grey-text text-lighten-4"><i>Customized Real Estate Analytics for Information and Marketing</i></p>
+          <p class="grey-text text-lighten-4"><i>Customized Real Estate Forecasting and Analytics</i></p>
 
 
         </div>
