update banner pic

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -68,7 +68,7 @@
     <div class="navbar-fixed">
         <nav class="white">
             <div class="nav-wrapper">
-                <a class="brand-logo left" href="/">
+                <a class="brand-logo left" href="http://divismart.com/">
                     <img src="https://www.divismart.com/static/site/images/ico/logo.png" alt="Logo">
                 </a>
                 <ul class="right hide-on-med-and-down">
@@ -94,7 +94,7 @@
   min-height: 50px;
   line-height: 0;
   height: auto;
-    background: url("https://www.divismart.com/static/site/images/custom-header-about.jpg") no-repeat;
+    background: url("http://freeforcommercialuse.net/wp-content/uploads/2017/03/msp_1407_2647.jpg") no-repeat;
   background-size: cover;
   background-attachment: fixed;
   background-position: 10% 0%;
@@ -128,7 +128,7 @@
       <div class="row" style="padding:0% 10% 0% 10%">
         <div class="col l6 s12">
           <h5 class="white-text">DiviSmart</h5>
-          <p class="grey-text text-lighten-4"><i>Customized Real Estate Analytics for Information and Marketing</i></p>
+          <p class="grey-text text-lighten-4"><i>Customized Real Estate Forecasting and Analytics</i></p>
 
 
         </div>
