--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -68,7 +68,7 @@
     <div class="navbar-fixed">
         <nav class="white">
             <div class="nav-wrapper">
-                <a class="brand-logo left" href="/">
+                <a class="brand-logo left" href="http://divismart.com/">
                     <img src="https://www.divismart.com/static/site/images/ico/logo.png" alt="Logo">
                 </a>
                 <ul class="right hide-on-med-and-down">
