--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -94,7 +94,7 @@
   min-height: 50px;
   line-height: 0;
   height: auto;
-    background: url("http://freeforcommercialuse.net/wp-content/uploads/2017/03/msp_1407_2647.jpg") no-repeat;
+    background: url("https://static.pexels.com/photos/29410/pexels-photo-29410.jpg") no-repeat;
   background-size: cover;
   background-attachment: fixed;
   background-position: 10% 0%;
@@ -114,7 +114,7 @@
 <ul>
   {% for post in site.posts %}
     <li>
-      <a href="{{ post.url }}">{{ post.title }}</a>
+      <a href="{{ post.url }}" style="font-size:125%">{{ post.title }}</a>
       <br>
       {{post.date}}
       <br>
