--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -74,6 +74,8 @@
                 <ul class="right hide-on-med-and-down">
                     <li><a href="http://divismart.com/" title='Home'>Home</a></li>
                     <li><a href='http://divismart.com/cashflow_engine/' title='Analyze'>Run Analysis</a></li>
+                    <li><a href='http://divismart.com/about/' title='About'>About Us</a></li>
+                    <li><a href='http://blog.divismart.com/' title='Blog'>Blog</a></li>
                     <li><a class="dropdown-button" href="#" data-activates="dropdown3">More<i class="material-icons right">arrow_drop_down</i></a></li>
                     
                         <li><a class="dropdown-button" href="#" data-activates="dropdown4">Account<i class="material-icons right">arrow_drop_down</i></a></li>
@@ -114,7 +116,7 @@
 <ul>
   {% for post in site.posts %}
     <li>
-      <a href="{{ post.url }}" style="font-size:125%">{{ post.title }}</a>
+      <a href="{{ post.url }}" style="font-size:150%; font-weight:bold;">{{ post.title }}</a>
       <br>
       {{post.date}}
       <br>
