--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -96,7 +96,7 @@
   min-height: 50px;
   line-height: 0;
   height: auto;
-    background: url("https://static.pexels.com/photos/29410/pexels-photo-29410.jpg") no-repeat;
+    background: url("https://preview.ibb.co/iNOBgQ/pexels_photo_29410.jpg") no-repeat;
   background-size: cover;
   background-attachment: fixed;
   background-position: 10% 0%;
@@ -105,6 +105,7 @@
 }
 
 </style>
+
 
 <div class="header-custom">
 
