--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -31,7 +31,7 @@
     <body>
 
 
-          <!-- header Nav Start -->
+       <!-- header Nav Start -->
     <ul id="dropdown1" class="dropdown-content">
         <li><a href='http://divismart.com/about/' title='About'>About Us</a></li>
         <li><a href='http://divismart.com/faq/' title='FAQ'>FAQ</a></li>
@@ -74,6 +74,8 @@
                 <ul class="right hide-on-med-and-down">
                     <li><a href="http://divismart.com/" title='Home'>Home</a></li>
                     <li><a href='http://divismart.com/cashflow_engine/' title='Analyze'>Run Analysis</a></li>
+                    <li><a href='http://divismart.com/about/' title='About'>About Us</a></li>
+                    <li><a href='http://blog.divismart.com/' title='Blog'>Blog</a></li>
                     <li><a class="dropdown-button" href="#" data-activates="dropdown3">More<i class="material-icons right">arrow_drop_down</i></a></li>
                     
                         <li><a class="dropdown-button" href="#" data-activates="dropdown4">Account<i class="material-icons right">arrow_drop_down</i></a></li>
@@ -87,7 +89,6 @@
             </div>
         </nav>
     </div>
-
 <header>
   <h1>{{ page.title }} </h1>
 </header>
