--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -119,7 +119,7 @@
     <li>
       <a href="{{ post.url }}">{{ post.title }}</a>
       <br>
-      {{post.date}}
+      {{post.date | date: '%B %d, %Y' }}}}
       <br>
       {{ post.excerpt }}
     </li>
