--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -119,7 +119,7 @@
     <li>
       <a href="{{ post.url }}" style="font-size:200%; font-weight:bold;">{{ post.title }}</a>
       <br>
-      {{post.date | date: '%B %d, %Y' }}}}
+      {{post.date | date: '%B %d, %Y' }}
       <br>
       {{ post.excerpt }}
     </li>
