--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -92,14 +92,15 @@
 
 
 <header>
-  <h1>{{ page.title }} </h1>
+  <h1>{{ page.title }}</h1>
+  <br>{{post.date | date: '%B %d, %Y' }}
 </header>
 
 <br><br>
 <div class="row">
 <div class="col s8 offset-s2">
+
 <ul>
-  {{post.date | date: '%B %d, %Y' }}
   {{content}}
 </ul>
 </div></div>
