--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -93,13 +93,14 @@
 
 <header>
   <h1>{{ page.title }}</h1>
-  <br>{{post.date | date: '%B %d, %Y' }}
 </header>
 
 <br><br>
 <div class="row">
 <div class="col s8 offset-s2">
-
+<ul>
+{post.date | date: '%B %d, %Y' }}
+</ul>
 <ul>
   {{content}}
 </ul>
