--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -99,9 +99,7 @@
 <div class="row">
 <div class="col s8 offset-s2">
 <ul>
-{{post.date | date: '%B %d, %Y' }}
-</ul>
-<ul>
+<p>{{ page.date }}</p>
   {{content}}
 </ul>
 </div></div>
