--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -99,7 +99,7 @@
 <div class="row">
 <div class="col s8 offset-s2">
 <ul>
-<p>{{post.date | date: '%B %d, %Y' }}</p>
+<p>{{page.date | date: '%B %d, %Y' }}</p>
   {{content}}
 </ul>
 </div></div>
