--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -99,7 +99,7 @@
 <div class="row">
 <div class="col s8 offset-s2">
 <ul>
-<p>{{page.date | date: '%B %d, %Y' }}</p>
+<b><p>{{page.date | date: '%B %d, %Y' }}</p></b>
   {{content}}
 </ul>
 </div></div>
