--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -198,7 +198,7 @@ s.setAttribute('data-timestamp', +new Date());
 
 li{
     margin-right:35px;
-    font-weight:550;
+    font-weight:115%;
   }
 
 p{
