--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -197,9 +197,10 @@ s.setAttribute('data-timestamp', +new Date());
 <style>
 
 li{
-    margin-right:35px;
+    margin-left:35px;
     font-weight:550;
     font-size:115%;
+    line-height: 1.75;
   }
 
 p{
