--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="DiviSmart's tips and strategies on personal finances and real estate investing. Information on creative financing, hot real estate markets, and housing market updates. All from the specialized perspective of DiviSmart's professionals.">
+    <meta name="description" content="Tips and strategies on personal finances and real estate investing from industry professionals and investors. Information on creative financing, hot real estate markets, and ongoing deal analysis. Inside the minds of successful and passionate real estate investors.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="https://www.divismart.com/static/site/logo.png">
 
@@ -24,7 +24,7 @@
     <script src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
     <script type="text/javascript" src="https://www.divismart.com/static/site/js/materialize.js"></script>
     <script type="text/javascript" src="https://www.divismart.com/static/site/js/init.js"></script>
-        <title>The DiviSmart Blog</title>
+        <title>DiviSmart Blog</title>
 
     </head><!--/head-->
 
