--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="Tips and strategies on personal finances and real estate investing from industry professionals and investors. Information on creative financing, hot real estate markets, and ongoing deal analysis. Inside the minds of successful and passionate real estate investors.">
+    <meta name="description" content="Ready for free tips and strategies on personal finances and real estate investing from industry professionals and investors? Check DiviSmart's Blog for information on creative financing, hot real estate markets, ongoing deal analysis, and market updates. Dive inside the minds of successful and passionate real estate investors from different walks of life.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="https://www.divismart.com/static/site/logo.png">
 
