--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -102,7 +102,7 @@
   {% for post in site.posts %}
   <br>
     <li>
-      <a href="{{ post.url }}" style="font-size:150%; font-weight:bold;">{{ post.title }}</a>
+      <a href="{{ post.url }}" style="font-size:150%; text-align:center;">{{ post.title }}</a>
       <br><br>
       <b>{{post.date | date: '%B %d, %Y' }}</b>
       <br>
