--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -99,7 +99,7 @@
 <div class="row">
 <div class="col s6 offset-s3">
 <ul>
-<b><p>{{page.date | date: '%B %d, %Y' }}</p></b>
+<center><p>{{page.date | date: '%B %d, %Y' }}</p></center>
   {{content}}
 </ul>
 
