--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -104,7 +104,7 @@
     <li>
       <Center><a href="{{ post.url }}" style="font-size:150%;">{{ post.title }}</a></Center>
       <br>
-      <b>{{post.date | date: '%B %d, %Y' }}</b>
+      <center><p style="font-size:75%">{{post.date | date: '%B %d, %Y' }}</p></center>
       <br>
       {{ post.excerpt }}
       
