--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -92,14 +92,15 @@
 
 
 <header>
-  <h1>{{ page.title }}</h1>
+  <h1>{{ page.title }}
+  <center><p>{{page.date | date: '%B %d, %Y' }}</p></center>
+  </h1>
 </header>
 
 <br><br>
 <div class="row">
 <div class="col s6 offset-s3">
 <ul>
-<center><p>{{page.date | date: '%B %d, %Y' }}</p></center>
   {{content}}
 </ul>
 
