--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -92,9 +92,8 @@
 
 
 <header>
-  <h1>{{ page.title }}
+  <h1>{{ page.title }}</h1>
   <center><p>{{page.date | date: '%B %d, %Y' }}</p></center>
-  </h1>
 </header>
 
 <br><br>
