--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -93,17 +93,14 @@
 
 <div class="header-custom">
 </div>
-
-<img src="/assets/images/pexels-photo-29410.jpg" width="400" style="float: center;" />
-
-<br><br><br>
+<br>
 <div class="row">
 <div class="col s6 offset-s3">
 <ul>
   {% for post in site.posts %}
   <br>
     <li>
-      <Center><a href="{{ post.url }}" style="font-size:165;">{{ post.title }}</a></Center>
+      <Center><a href="{{ post.url }}" style="font-size:165%;">{{ post.title }}</a></Center>
       <center><p style="font-size:85%;">{{post.date | date: '%B %d, %Y' }}</p></center>
       {{ post.excerpt }}
       
