--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -92,6 +92,7 @@
 
 
 <div class="header-custom">
+<img src="/assets/images/divilogo.jpg" style="float: middle;" />
 </div>
 <br>
 <div class="row">
