--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -92,7 +92,7 @@
 
 
 <div class="header-custom">
-<img src="/assets/images/divilogo.jpg" style="float: middle;" />
+<center><img src="/assets/images/divilogo.jpg" style="width:300px;" /></center>
 </div>
 <br>
 <div class="row">
