--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -92,9 +92,8 @@
 
 
 <div class="header-custom">
-<center><img src="/assets/images/divilogo.jpg" style="width:300px;" /></center>
+<center><img src="/assets/images/divilogo.jpg" style="width:300px; margin-top:5px;" /></center>
 </div>
-<br>
 <div class="row">
 <div class="col s6 offset-s3">
 <ul>
