--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -92,7 +92,7 @@
 
 
 <div class="header-custom">
-<center><img src="/assets/images/divilogo.jpg" style="width:300px; margin-top:5px;" /></center>
+<center><img src="/assets/images/divilogo.jpg" style="width:300px; padding-top:10px;" /></center>
 </div>
 <div class="row">
 <div class="col s6 offset-s3">
