--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -94,7 +94,7 @@
 <div class="header-custom">
 <center><img src="/assets/images/divilogo.jpg" style="width:300px; padding-top:10px;" /></center>
 </div>
-<div class="row">
+
 <div class="col s6 offset-s3">
 <ul>
   {% for post in site.posts %}
@@ -110,7 +110,7 @@
   {% endfor %}
 </ul>
 
-</div></div>
+</div>
     <footer class="page-footer" style="background-color:#1b232c;">
       <div class="row" style="padding:0% 10% 0% 10%">
         <div class="col l6 s12">
