--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -93,7 +93,7 @@
 
 <div class="header-custom">
 <center><img src="/assets/images/divilogo.jpg" style="width:300px; padding-top:10px;" /></center>
-<center><row><small>Personal Finance Tips and Real Estate Strategies</small>
+<center><row><i>Personal Finance Tipsand Real Estate Strategies</i>
 </row></center>
 </div>
 
