--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -90,13 +90,14 @@
         </nav>
     </div>
 
+<div class="header-custom">
+<center><img src="/assets/images/divilogo.jpg" style="width:200px; padding-top:10px;" /></center>
+</div>
 
-<header>
+
 <div class="col s6 offset-s3">
   <h1>{{ page.title }}</h1>
   </div>
-</header>
-
 <br>
 <div class="row">
 <div class="col s6 offset-s3">
