--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -94,14 +94,12 @@
 <center><img src="/assets/images/divilogo.jpg" style="width:200px; padding-top:10px;" /></center>
 </div>
 
-
-<div class="col s6 offset-s3">
-  <h1>{{ page.title }}</h1>
-  </div>
 <br>
 <div class="row">
 <div class="col s6 offset-s3">
 <ul>
+<center><p style="font-size:165%;">{{ page.title }}</p></center>
+<br>
 <p style="font-size:85%;">{{page.date | date: '%B %d, %Y' }}</p>
   {{content}}
 </ul>
