--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -94,11 +94,10 @@
 <center><img src="/assets/images/divilogo.jpg" style="width:200px; padding-top:10px;" /></center>
 </div>
 
-<br>
 <div class="row">
 <div class="col s6 offset-s3">
 <ul>
-<center><p style="font-size:165%;">{{ page.title }}</p></center>
+<center><p style="font-size:200%; font-weight:bold;">{{ page.title }}</p></center>
 <br>
 <p style="font-size:85%;">{{page.date | date: '%B %d, %Y' }}</p>
   {{content}}
