--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -95,10 +95,12 @@
 </div>
 
 <div class="row">
+<center><p style="font-size:200%; font-color:#517d7d;">{{ page.title }}</p></center>
+</div>
+
+<div class="row">
 <div class="col s6 offset-s3">
 <ul>
-<center><p style="font-size:200%; font-weight:bold;">{{ page.title }}</p></center>
-<br>
 <p style="font-size:85%;">{{page.date | date: '%B %d, %Y' }}</p>
   {{content}}
 </ul>
