--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -95,8 +95,9 @@
 </div>
 
 <div class="row">
+<div class="col s8 offset-s2">
 <center><p style="font-size:200%; font-color:#517d7d;">{{ page.title }}</p></center>
-</div>
+</div></div>
 
 <div class="row">
 <div class="col s6 offset-s3">
