--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -96,7 +96,7 @@
 
 <div class="row">
 <div class="col s8 offset-s2">
-<center><p style="font-size:200%; font-color:#517d7d;">{{ page.title }}</p></center>
+<center><p style="font-size:200%; color:#517d7d;">{{ page.title }}</p></center>
 </div></div>
 
 <div class="row">
