--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -97,7 +97,8 @@
 <div class="row">
 <div class="col s8 offset-s2">
 <center><p style="font-size:250%; color:#517d7d; font-weight:bold;">{{ page.title }}</p></center>
-</div></div>
+</div>
+</div>
 
 <div class="row">
 <div class="col s6 offset-s3">
