--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -94,8 +94,10 @@
 <center><img src="/assets/images/divilogo.jpg" style="width:200px; padding-top:20px;" /></center>
 </div>
 
+<div class="row">
 <div class="col s10 offset-s1">
 <center><p style="font-size:250%; color:#517d7d; font-weight:bold; padding-bottom:-10px">{{ page.title }}</p></center>
+</div>
 </div>
 
 <div class="row">
